--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">libraries</string>
+    <string name="app_name">Libraries</string>
+    <string name="StrokePieChart">StrokePieChart</string>
+    <string name="ShowDateTimePicker">Show DateTimePicker</string>
+    <string name="DateTimePicker">DateTimePicker</string>
 </resources>
