Updated sample, fixed #3, #4 and upgraded libs

--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="StrokePieChart">StrokePieChart</string>
     <string name="ShowDateTimePicker">Show DateTimePicker</string>
     <string name="DateTimePicker">DateTimePicker</string>
+    <string name="AddEntry">Add Entry</string>
+    <string name="Clear">Clear</string>
 </resources>
